TinyMCE: Fix color caret RTL alignment

--- a/client/components/tinymce/style.scss
+++ b/client/components/tinymce/style.scss
@@ -707,7 +707,7 @@ div.mce-path {
 .mce-panel .mce-btn i.mce-caret {
 	top: 5px;
 	right: 18px;
-	margin: 2px 0 0 -13px;
+	margin: 2px 0 0 -13px #{"/*rtl:ignore*/"};
 	border: none;
 	color: $gray;
 	&::before {
